Switch to import bean definition registrar (#8)
* initial work for supporting ImportBeanDefinitionRegistrar #7

* continuing work on new bean definition registrar #7

* add converter and mapper as parameter in query factory v2 #7

* remove old query factory #7

* additional cleanup #7