@@ -1,11 +1,11 @@
 /**
- * Copyright (C) 2015 digitalfondue (info@digitalfondue.ch)
+ * Copyright © 2015 digitalfondue (info@digitalfondue.ch)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *         http://www.apache.org/licenses/LICENSE-2.0
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,6 +16,7 @@
 package ch.digitalfondue.npjt;
 
 import java.lang.annotation.Annotation;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.ParameterizedType;
 import java.util.*;
@@ -54,8 +55,8 @@ public enum QueryType {
 	TEMPLATE {
 		@Override
 		String apply(String template, Class<?> rowMapper, NamedParameterJdbcTemplate jdbc, 
-				Method method, Object[] args, 
-				Collection<ColumnMapperFactory> columnMapperFactories, Collection<ParameterConverter> parameterConverters) {
+				Method method, Object[] args,
+				SortedSet<ColumnMapperFactory> columnMapperFactories, SortedSet<ParameterConverter> parameterConverters) {
 			return template;
 		}
 	},
@@ -75,9 +76,9 @@ public enum QueryType {
 		private final Map<Class<Object>, HasRowmapper> cachedClassToMapper = new ConcurrentHashMap<>();
 
 		@Override
-		Object apply(String template, Class<?> rowMapper, NamedParameterJdbcTemplate jdbc, 
-				Method method, Object[] args, 
-				Collection<ColumnMapperFactory> columnMapperFactories, Collection<ParameterConverter> parameterConverters) {
+		Object apply(String template, Class<?> rowMapper, NamedParameterJdbcTemplate jdbc,
+					 Method method, Object[] args,
+					 SortedSet<ColumnMapperFactory> columnMapperFactories, SortedSet<ParameterConverter> parameterConverters) {
 			JdbcAction action = actionFromContext(method, template);
 			SqlParameterSource parameters = extractParameters(method, args, parameterConverters);
 			switch (action) {
@@ -96,7 +97,7 @@ public enum QueryType {
 		@SuppressWarnings("unchecked")
 		private Object doQuery(String template, Class<?> rowMapper,
 				NamedParameterJdbcTemplate jdbc, Method method,
-				SqlParameterSource parameters, Collection<ColumnMapperFactory> columnMapperFactories) {
+				SqlParameterSource parameters, SortedSet<ColumnMapperFactory> columnMapperFactories) {
 			boolean isReturnOptional = isReturnOptional(method);
 			if (method.getReturnType().isAssignableFrom(List.class) || isReturnOptional) {
 				Class<Object> c = extractGenericMethod(method);
@@ -117,12 +118,12 @@ public enum QueryType {
 		}
 
 		@SuppressWarnings("unchecked")
-		private HasRowmapper getRowMapper(Class<Object> c, Class<?> rowMapper, Collection<ColumnMapperFactory> columnMapperFactories) {
+		private HasRowmapper getRowMapper(Class<Object> c, Class<?> rowMapper, SortedSet<ColumnMapperFactory> columnMapperFactories) {
 			
 			if(rowMapper != ConstructorAnnotationRowMapper.class) {
 				try {
-					return new HasRowmapper(true, (RowMapper<Object>) rowMapper.newInstance());
-				} catch (InstantiationException | IllegalAccessException e) {
+					return new HasRowmapper(true, (RowMapper<Object>) rowMapper.getConstructor().newInstance());
+				} catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
 					throw new IllegalArgumentException("Was not able to create a new instance of " + rowMapper + ". It require a 0 args constructor.", e);
 				}
 			} else if (!cachedClassToMapper.containsKey(c)) {
@@ -133,13 +134,12 @@ public enum QueryType {
 	};
 	
 	abstract Object apply(String template, Class<?> rowMapper, NamedParameterJdbcTemplate jdbc,
-			Method method, Object[] args, 
-			Collection<ColumnMapperFactory> columnMapperFactories,
-			Collection<ParameterConverter> parameterConverters);
+			Method method, Object[] args,
+			SortedSet<ColumnMapperFactory> columnMapperFactories, SortedSet<ParameterConverter> parameterConverters);
 	
 	private static Object handleSingleObject(String template,
 			NamedParameterJdbcTemplate jdbc, SqlParameterSource parameters,
-			Collection<ColumnMapperFactory> columnMapperFactories,
+			SortedSet<ColumnMapperFactory> columnMapperFactories,
 			Class<Object> c, HasRowmapper r, Method method) {
 		if (r.present) {
 			return jdbc.queryForObject(template, parameters, r.rowMapper);
@@ -176,7 +176,7 @@ public enum QueryType {
 		return method.getReturnType().isAssignableFrom(Optional.class);
 	}
 
-	private static RowMapper<Object> matchToOutput(Collection<ColumnMapperFactory> columnMapperFactories, Class<Object> o, Annotation[] annotations) {
+	private static RowMapper<Object> matchToOutput(SortedSet<ColumnMapperFactory> columnMapperFactories, Class<Object> o, Annotation[] annotations) {
 		
 		for(ColumnMapperFactory mapper : columnMapperFactories) {
 			if(mapper.accept(o, annotations)) {
@@ -216,7 +216,7 @@ public enum QueryType {
 
 	
 
-	private static HasRowmapper handleClass(Class<Object> c, Collection<ColumnMapperFactory> columnMapperFactories) {
+	private static HasRowmapper handleClass(Class<Object> c, SortedSet<ColumnMapperFactory> columnMapperFactories) {
 		if (ConstructorAnnotationRowMapper.hasConstructorInTheCorrectForm(c)) {
 			return new HasRowmapper(true, new ConstructorAnnotationRowMapper<>(c, columnMapperFactories));
 		} else {
@@ -224,7 +224,7 @@ public enum QueryType {
 		}
 	}
 
-	private static SqlParameterSource extractParameters(Method m, Object[] args, Collection<ParameterConverter> parameterConverters) {
+	private static SqlParameterSource extractParameters(Method m, Object[] args, SortedSet<ParameterConverter> parameterConverters) {
 
 		Annotation[][] parameterAnnotations = m.getParameterAnnotations();
 		if (parameterAnnotations == null || parameterAnnotations.length == 0) {
@@ -311,7 +311,7 @@ public enum QueryType {
 
 	private static List<Object> handleList(String template,
 			NamedParameterJdbcTemplate jdbc, SqlParameterSource parameters,
-			Collection<ColumnMapperFactory> columnMapperFactories,
+			SortedSet<ColumnMapperFactory> columnMapperFactories,
 			Class<Object> c, HasRowmapper r, Method method) {
 		if (r.present) {
 			return jdbc.query(template, parameters, r.rowMapper);
